--- a/src/app/pages/orders/orders-list/orders-list.component.html
+++ b/src/app/pages/orders/orders-list/orders-list.component.html
@@ -2,7 +2,7 @@
   <div style="margin:auto;position:fixed;top:50%;left:50%;">
       <img src="assets/crm/spinner.gif " width='25px'>
   </div>
-</div>8
+</div>
 
 <ba-card cardTitle="ORDERS" class="smart-table-container" #orders>
     <div class="row">
