--- a/src/app/pages/leads/leads-list/leads-list.component.html
+++ b/src/app/pages/leads/leads-list/leads-list.component.html
@@ -126,7 +126,7 @@
                                 <span class="tooltiptext">View</span>
                             </i>
                         </a>
-                        <a [routerLink]="['../edit',item.LeadID]" *ngIf="item.LeadStatusCode =='L' || item.LeadStatusCode =='F' ">
+                        <a [routerLink]="['../edit',item.LeadID]">
                             <i class="ion-edit custom-tooltip-ion" style="margin-right: 5px">
                                 <span class="tooltiptext">Edit</span>
                             </i>
