--- a/src/app/pages/receipt/create-receipt/create-receipt.component.html
+++ b/src/app/pages/receipt/create-receipt/create-receipt.component.html
@@ -5,7 +5,7 @@
 </div>
 <ba-card cardTitle="{{cardTitle}}" id="newTicket">
     <button class="btn btn-danger buttonMargin backBtn" [ngClass]="isViewOnly ? 'submit-create-receipt' : 'backtoreceiptlist'" (click)="goToListPage()">Back</button>
-    <button class="btn btn-danger buttonMargin btn-margin submit-create-receipt" *ngIf="!isViewOnly" (click)="submitCutting();">Submit</button>
+    <button class="btn btn-danger buttonMargin btn-margin submit-create-receipt" *ngIf="!isViewOnly" (click)="submitReceipt();">Submit</button>
     <div class="row">
         <div class="col-3">
             <div class="form-group" *ngIf="ReceiptID == 0">
