--- a/src/app/pages/orders/create-order/create-order.component.html
+++ b/src/app/pages/orders/create-order/create-order.component.html
@@ -149,7 +149,7 @@
             <div class="col-3">
                 <div class="form-group">
                     <label>Available Points</label>
-                    <input type='text' class='form-control' [disabled] [(ngModel)]="createOrder.AvailablePoints">
+                    <input type='text' class='form-control' [disabled]="true" [(ngModel)]="createOrder.AvailablePoints">
                 </div>
             </div>
             <div class="col-3">
